2007-01-13  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (build_modrm_byte): Check number of operands
	when procssing memory/register operand.

2007-01-12  Nick Clifton  <nickc@redhat.com>

	PR gas/3856
	* macro.c (expand_irp): Do not ignore spaces inside quoted
	strings.

2007-01-12  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-spu.h (TC_RELOC_RTSYM_LOC_FIXUP): Delete.
	* config/tc-m32r.h (TC_RELOC_RTSYM_LOC_FIXUP): Delete.
	* config/tc-mn10300.h (TC_RELOC_RTSYM_LOC_FIXUP): Delete.
	(TC_FORCE_RELOCATION): Define.
	(TC_FORCE_RELOCATION_LOCAL): Define.
	* config/tc-mn10300.c (mn10300_fix_adjustable): Adjust.

2007-01-12  Alan Modra  <amodra@bigpond.net.au>

	* input-file.c (input_file_open): Check fgets return.

2007-01-11  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (do_t_add_sub): Use Rd and Rs.

2007-01-11  Nick Clifton  <nickc@redhat.com>

	PR gas/3707
	* config/tc-arm.c (md_begin): Cope with an NULL mcpu_fpu_opt
	variable.

	* config/tc-mcore.c (md_number_to_chars): Use
	number_to_chars_{big|little}endian.

2007-01-08  Kazu Hirata  <kazu@codesourcery.com>

	* config/tc-m68k.c (m68k_archs, m68k_cpus): Treat Fido as an
	architecture by itself.
	(m68k_ip): Don't issue a warning for tbl instructions on fido.
	(m68k_elf_final_processing): Treat Fido as an architecture by
	itself.

2007-01-08  Kai Tietz	<kai.tietz@onevision.com>

	* configure.tgt: Renamed target x86_64-*-mingw64 to x86_64-*-mingw*

2007-01-05  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (set_intel_syntax): Update set_intel_syntax
	depending on allow_naked_reg.

2007-01-04  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (do_cpsi): Set mmod bit for 2 argument form.

2007-01-04  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/3826
	* config/tc-i386.c (register_prefix): New.
	(set_intel_syntax): Set set_intel_syntax to "" if register
	prefix isn't needed.
	(check_byte_reg): Use register_prefix for error message.
	(check_long_reg): Likewise.